[package]
name = "jelly-pac"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=[]

[dependencies]
delegate = "0.13.5"
jelly-mem_access = { version="0.2.7", default-features=false }
#jelly-mem_access = { git="https://github.com/ryuz/jelly-mem_access.git", branch="develop", default-features=false }
#jelly-mem_access = { path = "../mem_access", default-features=false }

#jelly-lib = { git="https://github.com/ryuz/jelly-lib-rs.git", branch="develop", default-features=false }
jelly-lib = { git="https://github.com/ryuz/jelly-lib-rs.git", rev="4685606", default-features=false }

