[package]
name = "jelly-pac"
version = "0.1.4"
authors = ["Ryuz <ryuz@rtc-lab.com>"]
edition = "2021"
repository = "https://github.com/ryuz/jelly-pac-rs.git"
keywords = ["jelly", "pac", "fpga"]
license = "MIT"
readme = "README.md"

description = "Peripheral Access Crate for the Jelly FPGA real-time computing development platform."

[features]
default = ["std"]
std=[]

[dependencies]
delegate = { version = ">= 0.5, < 0.14" }
jelly-mem_access = { version=">= 0.2, < 0.3", default-features=false }
jelly-lib = { version=">= 0.2, < 0.3", default-features=false }
